Java 8 refactoring