@@ -4,14 +4,15 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-import com.google.common.collect.FluentIterable;
 import com.n1global.acc.CouchDbConfig;
+import com.n1global.acc.json.CouchDbDocument;
 import com.ning.http.client.AsyncHttpClient;
 
 public class BlogDbTest {
@@ -66,19 +67,19 @@ public class BlogDbTest {
 
         Collections.sort(blogRelatedDocs);//sort by timestamps
 
-        List<BlogComment> comments = FluentIterable.from(blogRelatedDocs).filter(BlogComment.class).toList();
+        List<CouchDbDocument> comments = blogRelatedDocs.stream().filter(d -> d.getClass() == BlogComment.class).collect(Collectors.toList());
 
-        BlogPost post = FluentIterable.from(blogRelatedDocs).filter(BlogPost.class).first().get();
+        CouchDbDocument post = blogRelatedDocs.stream().filter(d -> d.getClass() == BlogPost.class).findFirst().get();
 
         Map<String, Author> authors = new HashMap<>();
 
-        for (Author author : FluentIterable.from(blogRelatedDocs).filter(Author.class)) {
-            authors.put(author.getDocId(), author);
+        for (CouchDbDocument author : blogRelatedDocs.stream().filter(d -> d.getClass() == Author.class).collect(Collectors.toList())) {
+            authors.put(author.getDocId(), (Author)author);
         }
 
-        Assert.assertEquals("John", authors.get(post.getAuthorId()).getName());//John is blog post author
-        Assert.assertEquals("Sally", authors.get(comments.get(0).getAuthorId()).getName());//Sally is author of the first comment
-        Assert.assertEquals("John", authors.get(comments.get(1).getAuthorId()).getName());//John is author of the second comment
+        Assert.assertEquals("John", authors.get(((BlogPost)post).getAuthorId()).getName());//John is blog post author
+        Assert.assertEquals("Sally", authors.get(((BlogComment)comments.get(0)).getAuthorId()).getName());//Sally is author of the first comment
+        Assert.assertEquals("John", authors.get(((BlogComment)comments.get(1)).getAuthorId()).getName());//John is author of the second comment
 
         Assert.assertEquals(2, comments.size());
         Assert.assertEquals(2, authors.size());
